Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,9 @@ header {
   display: inline-block;
 }
 
+.intro .section__text p {
+  margin-bottom: 0;
+}
 
 /* My services */
 
@@ -795,7 +798,7 @@ header {
   .section__text {
     grid-area: text;
     grid-column: -1 / 1;
-
+    padding-left: 5px;
     width: calc(450px + 1.5em);
   }
   .section__text p {
